band-aid patch for bug 134523, so that embeddors can still download files even if they don't have a progress dialog implementation sr=blake, r=ccarlen